--- a/src/pages/order2/order2.html
+++ b/src/pages/order2/order2.html
@@ -33,10 +33,10 @@
   </ion-list>
   <div *ngIf="status == 0">
     <button id="oRDER-button1" ion-button color="assertive" block style="font-weight:600;font-size:20px;" (click)="confirm()">
-      Finished
+      Xác nhận
     </button>
     <button id="oRDER-button1" ion-button  block style="font-weight:600;font-size:20px;background-color:#d01737" (click)="cancel()">
-      Cancel
+      hủy order
     </button>
   </div>
 </ion-content>
