--- a/src/pages/tab/tab.html
+++ b/src/pages/tab/tab.html
@@ -1,7 +1,7 @@
 <ion-tabs>
-    <ion-tab [root]="tab0Root" [rootParams]="tab1param" tabTitle="New Order" tabIcon="bookmark"></ion-tab>
-    <ion-tab [root]="tab1Root" [rootParams]="tab1param"  tabTitle="Finished" tabIcon="bookmarks"></ion-tab>
-    <ion-tab [root]="tab2Root" [rootParams]="tab1param" tabTitle="rejected order" tabIcon="alert"></ion-tab>
-    <ion-tab [root]="tab4Root" [rootParams]="tab1param" tabTitle="Cancelled " tabIcon="close-circle"></ion-tab>
+    <ion-tab [root]="tab0Root" [rootParams]="tab1param" tabTitle="Order mới" tabIcon="bookmark"></ion-tab>
+    <ion-tab [root]="tab1Root" [rootParams]="tab1param" tabTitle="Đã ship xong" tabIcon="bookmarks"></ion-tab>
+    <ion-tab [root]="tab2Root" [rootParams]="tab1param" tabTitle="Ta đã huỷ" tabIcon="alert"></ion-tab>
+    <ion-tab [root]="tab4Root" [rootParams]="tab1param" tabTitle="Khách đã huỷ" tabIcon="close-circle"></ion-tab>
 
 </ion-tabs>
