--- a/src/pages/realhome1/realhome1.html
+++ b/src/pages/realhome1/realhome1.html
@@ -6,15 +6,19 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding style="background:url(assets/bg2.png) no-repeat center;background-size:cover;" id="page1">
+  <div *ngFor="let item1 of itemtotal">
+    <h5 style="color: white; font-family: 'Times new roman';">Hôm nay bán được <b>{{item1.total}} đ</b></h5>
+  </div>
   <ion-list id="lIST-list2">
    <!-- <ion-item color="none" id="lIST-list-item15" *ngFor="let item of items" (click)="openoder2(item)">
       <ion-icon name="paper" item-left></ion-icon>
       <h2><b>Ten khach : {{item.id}}.{{item.khach}}</b></h2>
       <h3>Dia chi : {{item.diachi}}</h3>
     </ion-item>-->
+    
     <section ng-repeat="card in cards" 
       class="card theme-green"
-      data-color="#F7AA17"  *ngFor="let item of items" (click)="openoder2(item)">
+      data-color="#F7AA17" *ngFor="let item of items" (click)="openoder2(item)">
       <div class="card__map">
         <div class="card__map__inner"></div>
       </div>
